# Capture

./: .gitattributes  .gitignore  CaptureNote.tscn  README.org  Save.gdns  godot-capture.tres  kenny_font.tres  kenny_font_18.tres  login.gdns  main.tscn  oauth_listener.gdns  project.godot  todo.org
godot-capture/: .gitattributes  Cargo.toml
godot-capture/src/: lib.rs  login.rs  oauth.rs
godot-capture/src/inbox/: inbox.rs  mod.rs  storage.rs
godot-capture/src/nodes/: capture_note.rs  listener.rs  login.rs  mod.rs  oauth.rs
godot-capture/src/nodes/inbox/: inbox.rs  mod.rs  storage.rs
godot-capture/src/nodes/oauth/: login_site.rs  mod.rs  provider.rs  token.rs  webserver.rs
godot-capture/src/oauth/: example-gitlab-calls.org  login_site.rs  mock_token_receiver.rs  mod.rs  provider.rs  token.rs  webserver.rs
godot-capture/src/todo/: decoder.rs  mock_storage.rs  mod.rs  storage.rs  todo.rs
godot-capture/templates/: capture.html.hbs
iOSApp/: Capture.pck
iOSApp/Capture/: Capture-Info.plist  app_delegate+OpenURL.m  app_delegate+OpenURL.mm  app_delegate.h  dummy.cpp  export_options.plist  gl_view.h  godot_capture.h
iOSApp/Capture.xcodeproj/: project.pbxproj
images/buttons/: red_boxCheckmark.png.import  red_boxCheckmarkPressed.png.import
images/icons/: icon_appstore.png.import  icon_ios.png.import  icon_iphone.png.import
images/launch_screens/: ipad_1024.png.import  ipad_1536_2048.png.import  ipad_2048.png.import  ipad_768_1024.png.import  iphone_1125.png.import  iphone_1242_2208.png.import  iphone_2208.png.import  iphone_2436.png.import  (+4 more)
(+18 files in other folders)
