[package]
name = "godot-capture"
version = "0.1.0"
authors = ["Eric Smith <paytonrules@gmail.com>"]
edition = "2018"

[dependencies]
gdnative = "0.9.0"
rocket = "0.4.5"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates"]

[dev-dependencies]
ureq = "1.4.1"

[lib]
crate-type = ["cdylib", "staticlib"]
