[package]
name = "godot-capture"
version = "0.1.0"
authors = ["Eric Smith <paytonrules@gmail.com>"]
edition = "2018"

[dependencies]
gdnative = "0.9.0"
rocket = "0.4.5"
thiserror = "1.0"
anyhow = "1.0.33"
port_check = "0.1.5"
ureq = { version = "1.5.1", features = ["json"] }
lazy_static = "1.4.0"
base64 = "0.13.0"

[dev-dependencies]
serial_test = "0.5.0"

[lib]
crate-type = ["cdylib", "staticlib"]
